// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a Cart component When is rendered with cart.totalCost === 0 Then is matched to snapshop 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "paddingTop": 266.8,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://trello-attachments.s3.amazonaws.com/603be1b68ce9c654d30ae543/60506d7b3b22568450a0dc85/e2f00d68e8c7e38709c459cd55d470ad/finall3-e1604082541825-400x400.jpg",
      }
    }
    style={
      Object {
        "borderRadius": 50,
        "height": 100,
        "width": 100,
      }
    }
  />
  <Text
    style={
      Object {
        "fontFamily": "RalewayRegular",
        "fontSize": 14,
        "marginHorizontal": 20,
        "paddingVertical": 20,
      }
    }
  >
    YOUR CART IS EMPTY
  </Text>
  <Text
    style={
      Object {
        "fontFamily": "RalewayRegular",
        "fontSize": 14,
        "marginHorizontal": 20,
        "paddingVertical": 20,
      }
    }
  >
    Check if there any products in your wishlist and snatch them up before they're gone
  </Text>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "bottom": 266.8,
        "height": 80,
        "position": "absolute",
        "width": "90%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2E3192",
          "borderRadius": 5,
          "height": 50,
          "justifyContent": "center",
          "marginVertical": 10,
          "opacity": 1,
          "paddingHorizontal": 10,
          "width": "100%",
        }
      }
      testID="shopNow"
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        SHOP NOW
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "borderWidth": 1,
          "height": 50,
          "justifyContent": "center",
          "marginVertical": 10,
          "opacity": 1,
          "paddingHorizontal": 10,
          "width": "100%",
        }
      }
      testID="favourite"
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        VIEW WISHLIST
      </Text>
    </View>
  </View>
</View>
`;

exports[`Given a Cart component When is rendered with cart.totalCost === 1 Then is mached snapshot 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "margin": 10,
    }
  }
>
  <RCTScrollView
    bounces={false}
    data={
      Array [
        Object {
          "_id": "1",
          "cost": Object {
            "currency": "euro",
            "value": 1,
          },
          "images": Object {
            "alls": Array [
              "url",
            ],
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "marginBottom": 100,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "white",
              "elevation": 5,
              "height": 200,
              "justifyContent": "center",
              "marginTop": 10,
              "shadowColor": "grey",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.15,
              "shadowRadius": 3.84,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "margin": 5,
                  "opacity": 1,
                  "paddingLeft": 10,
                }
              }
              testID="productImage"
            >
              <Image
                source={
                  Object {
                    "uri": "url",
                  }
                }
                style={
                  Object {
                    "borderRadius": 5,
                    "height": 150,
                    "justifyContent": "center",
                    "width": 100,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "height": 150,
                  "width": 250,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "paddingBottom": 8,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontFamily": "RalewayRegular",
                      "fontSize": 18,
                      "marginBottom": 5,
                      "paddingTop": 5,
                    }
                  }
                />
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="delete"
                >
                  <View
                    style={
                      Object {
                        "overflow": "hidden",
                      }
                    }
                  >
                    <View>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "transparent",
                            "justifyContent": "center",
                          }
                        }
                      >
                        <Text />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "fontFamily": "RalewayExtraLight",
                    "fontSize": 14,
                    "marginBottom": 5,
                    "paddingTop": 5,
                  }
                }
              >
                What a Nice Day!
              </Text>
              <View
                style={
                  Object {
                    "marginLeft": 180,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#F3603F",
                      "fontFamily": "MontserratRegular",
                      "fontSize": 18,
                      "marginBottom": 5,
                      "paddingTop": 15,
                      "width": 200,
                    }
                  }
                >
                  1.00 euro
                </Text>
                <View
                  style={
                    Object {
                      "alignItems": "stretch",
                      "flexDirection": "row",
                      "paddingTop": 15,
                    }
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="decrease"
                  >
                    <View
                      style={
                        Object {
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "transparent",
                              "justifyContent": "center",
                            }
                          }
                        >
                          <Text />
                        </View>
                      </View>
                    </View>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#2E3192",
                        "fontFamily": "RalewayRegular",
                        "fontSize": 18,
                        "marginBottom": 5,
                        "marginHorizontal": 5,
                        "paddingTop": 0.5,
                      }
                    }
                  />
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="increase"
                  >
                    <View
                      style={
                        Object {
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "marginLeft": 10,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "transparent",
                              "justifyContent": "center",
                            }
                          }
                        >
                          <Text />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "bottom": 10,
        "height": 80,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        Total:
      </Text>
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        1.00 euros
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F3603F",
          "borderRadius": 5,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
      testID="checkout"
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "RalewayRegular",
            "fontSize": 18,
          }
        }
      >
        CHECKOUT
      </Text>
    </View>
  </View>
</View>
`;

exports[`Given a Cart component When is rendered with item.motto === hello Then is mached snapshot 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "margin": 10,
    }
  }
>
  <RCTScrollView
    bounces={false}
    data={
      Array [
        Object {
          "_id": "1",
          "cost": Object {
            "currency": "euro",
            "value": 1,
          },
          "images": Object {
            "alls": Array [
              "url",
            ],
          },
          "motto": "hello",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "marginBottom": 100,
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "white",
              "elevation": 5,
              "height": 200,
              "justifyContent": "center",
              "marginTop": 10,
              "shadowColor": "grey",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.15,
              "shadowRadius": 3.84,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "margin": 5,
                  "opacity": 1,
                  "paddingLeft": 10,
                }
              }
              testID="productImage"
            >
              <Image
                source={
                  Object {
                    "uri": "url",
                  }
                }
                style={
                  Object {
                    "borderRadius": 5,
                    "height": 150,
                    "justifyContent": "center",
                    "width": 100,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "height": 150,
                  "width": 250,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "paddingBottom": 8,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontFamily": "RalewayRegular",
                      "fontSize": 18,
                      "marginBottom": 5,
                      "paddingTop": 5,
                    }
                  }
                />
                <View
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="delete"
                >
                  <View
                    style={
                      Object {
                        "overflow": "hidden",
                      }
                    }
                  >
                    <View>
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "transparent",
                            "justifyContent": "center",
                          }
                        }
                      >
                        <Text
                          allowFontScaling={false}
                          style={
                            Array [
                              Object {
                                "color": "#242424",
                                "fontSize": 24,
                              },
                              Object {
                                "backgroundColor": "transparent",
                              },
                              Object {
                                "fontFamily": "ionicons",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                              Object {},
                            ]
                          }
                          testID="iconIcon"
                        >
                          
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "fontFamily": "RalewayExtraLight",
                    "fontSize": 14,
                    "marginBottom": 5,
                    "paddingTop": 5,
                  }
                }
              >
                hello
              </Text>
              <View
                style={
                  Object {
                    "marginLeft": 180,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#F3603F",
                      "fontFamily": "MontserratRegular",
                      "fontSize": 18,
                      "marginBottom": 5,
                      "paddingTop": 15,
                      "width": 200,
                    }
                  }
                >
                  1.00 euro
                </Text>
                <View
                  style={
                    Object {
                      "alignItems": "stretch",
                      "flexDirection": "row",
                      "paddingTop": 15,
                    }
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="decrease"
                  >
                    <View
                      style={
                        Object {
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "transparent",
                              "justifyContent": "center",
                            }
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            style={
                              Array [
                                Object {
                                  "color": "#2E3192",
                                  "fontSize": 20,
                                },
                                Object {
                                  "backgroundColor": "transparent",
                                },
                                Object {
                                  "fontFamily": "ionicons",
                                  "fontStyle": "normal",
                                  "fontWeight": "normal",
                                },
                                Object {},
                              ]
                            }
                            testID="iconIcon"
                          >
                            
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#2E3192",
                        "fontFamily": "RalewayRegular",
                        "fontSize": 18,
                        "marginBottom": 5,
                        "marginHorizontal": 5,
                        "paddingTop": 0.5,
                      }
                    }
                  />
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                    testID="increase"
                  >
                    <View
                      style={
                        Object {
                          "overflow": "hidden",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "marginLeft": 10,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "transparent",
                              "justifyContent": "center",
                            }
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            style={
                              Array [
                                Object {
                                  "color": "#2E3192",
                                  "fontSize": 20,
                                },
                                Object {
                                  "backgroundColor": "transparent",
                                },
                                Object {
                                  "fontFamily": "ionicons",
                                  "fontStyle": "normal",
                                  "fontWeight": "normal",
                                },
                                Object {},
                              ]
                            }
                            testID="iconIcon"
                          >
                            
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "bottom": 10,
        "height": 80,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        Total:
      </Text>
      <Text
        style={
          Object {
            "fontFamily": "MontserratRegular",
            "fontSize": 18,
          }
        }
      >
        1.00 euros
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F3603F",
          "borderRadius": 5,
          "height": 50,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
      testID="checkout"
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "RalewayRegular",
            "fontSize": 18,
          }
        }
      >
        CHECKOUT
      </Text>
    </View>
  </View>
</View>
`;
